Adicionar footer e remover arquivo teste.md

--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
   </div>
 </div>
 
+  </main>
+
+  <footer>
+    <p>Desenvolvido por Vinicius</p>
+  </footer>
+
 </body>
 
 
 
 <script src="script.js"></script>
-</body>
 </html>
